# sentinel-ssh

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: sentinel.yaml
docs/: threat_model.md  v1-freeze.md
scripts/: run_dev.sh
sentinel/: banner.py  config.py  detector.py  ingest.py  main.py  parser.py  responder.py  state.py  ui.py
systemd/: sentinel-ssh.service
